<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="40dp"
    tools:context=".register">

    <TextView
        android:id="@+id/txt_Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/cabin"
        android:text="@string/daftar"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selamat_datang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin"
        android:text="@string/selamat_datang_teman_baru"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_Register" />


    <TextView
        android:id="@+id/txt_nama_pertama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/nama_awal"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selamat_datang" />

    <EditText
        android:id="@+id/input_nama_awal"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_nama_pertama"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColor"
        android:autofillHints="name"/>

    <TextView
        android:id="@+id/txt_nama_akhir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/nama_akhir"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="85dp"
        app:layout_constraintStart_toEndOf="@id/txt_nama_pertama"
        app:layout_constraintTop_toBottomOf="@+id/selamat_datang" />

    <EditText
        android:id="@+id/input_nama_akhir"
        android:layout_width="wrap_content"
        android:width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_nama_akhir"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColor"
        android:autofillHints="name"/>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nama_awal"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textColor"
        android:autofillHints="emailAddress"/>

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_username"
        android:inputType="text"
        android:textColorHint="@color/textColor"
        android:autofillHints="username"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_password"
        android:inputType="textPassword"
        android:textColorHint="@color/textColor"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/txt_ulang_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/ulang_password"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <EditText
        android:id="@+id/input_ulang_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="12dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/txt_ulang_password"
        android:inputType="textPassword"
        android:textColorHint="@color/textColor"
        android:autofillHints="password"/>

    <TextView
        android:id="@+id/txt_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/tanggal_lahir"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_ulang_password" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_tanggal_lahir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/input_tanggal_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:autofillHints="birthdate"
            android:background="@drawable/rounded_corner"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:padding="12dp"
            android:textColorHint="@color/textColor" />
        <TextView
            android:id="@+id/txt_input_tanggal_lahir"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/input_tanggal_lahir"
            android:layout_alignBottom="@id/input_tanggal_lahir"
            android:fontFamily="@font/cabin"
            android:textSize="17sp" />
    </RelativeLayout>

    <android.widget.Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="44dp"
        android:width="200dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/cabin_semibolditalic"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/btnTextColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>